starting a discussion rewrite

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -337,3 +337,37 @@ Publisher: Nature Publishing Group},
   pages = {248--259},
   file = {ScienceDirect Snapshot:/home/deren/Zotero/storage/QCU2NPCX/S0040580998914034.html:text/html},
 }
+
+@article{bryant2012inferring,
+  title={Inferring species trees directly from biallelic genetic markers: bypassing gene trees in a full coalescent analysis},
+  author={Bryant, David and Bouckaert, Remco and Felsenstein, Joseph and Rosenberg, Noah A and RoyChoudhury, Arindam},
+  journal={Molecular biology and evolution},
+  volume={29},
+  number={8},
+  pages={1917--1932},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@article{chifman2014quartet,
+  title={Quartet inference from SNP data under the coalescent model},
+  author={Chifman, Julia and Kubatko, Laura},
+  journal={Bioinformatics},
+  volume={30},
+  number={23},
+  pages={3317--3324},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+@article{vachaspati2018svdquest,
+  title={SVDquest: Improving SVDquartets species tree estimation using exact optimization within a constrained search space},
+  author={Vachaspati, Pranjal and Warnow, Tandy},
+  journal={Molecular phylogenetics and evolution},
+  volume={124},
+  pages={122--136},
+  year={2018},
+  publisher={Elsevier}
+}
+
+
