--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2434,7 +2434,7 @@ patterns. Examples: Heliconius.
 \subsubsection{Acknowledgements}
 This work was supported by the National Science Foundation 
 (NSF DEB-2046813 awarded to D.A.R.E. and NSF Graduate Research Fellowship DGE 16-44869 awarded 
-to P.F.M.). \hl{Thanks to Yun Deng for guidance on preliminary ideas and to...}
+to P.F.M.). Thanks to Yun Deng for guidance on preliminary ideas and to the Eaton Lab for valuable feedback.
 
 
 %\subsection{Citations}
